pushing to laptop

--- a/src/main/resources/assets/malum/lang/en_us.json
+++ b/src/main/resources/assets/malum/lang/en_us.json
@@ -1,18 +1,18 @@
 {
-  "attribute.name.malum.heart_of_stone_capacity": "Heart Of Stone Capacity",
-  "attribute.name.malum.heart_of_stone_hunger_cost": "Heart Of Stone Hunger Cost",
-  "attribute.name.malum.heart_of_stone_recovery_speed": "Heart Of Stone Recovery Speed",
-  "attribute.name.malum.heart_of_stone_strength": "Heart Of Stone Strength",
-  "attribute.name.malum.magic_damage": "Magic Damage",
-  "attribute.name.malum.magic_proficiency": "Magic Proficiency",
-  "attribute.name.malum.magic_resistance": "Magic Resistance",
-  "attribute.name.malum.scythe_proficiency": "Scythe Proficiency",
-  "attribute.name.malum.soul_ward_capacity": "Soul Ward Capacity",
-  "attribute.name.malum.soul_ward_downtime_recovery_speed": "Soul Ward Downtime Recovery Speed",
-  "attribute.name.malum.soul_ward_recovery_speed": "Soul Ward Recovery Speed",
-  "attribute.name.malum.soul_ward_strength": "Soul Ward Strength",
-  "attribute.name.malum.spirit_reach": "Spirit Reach",
-  "attribute.name.malum.spirit_spoils": "Spirit Spoils",
+  "attribute.name.generic.malum.heart_of_stone_capacity": "Heart Of Stone Capacity",
+  "attribute.name.generic.malum.heart_of_stone_hunger_cost": "Heart Of Stone Hunger Cost",
+  "attribute.name.generic.malum.heart_of_stone_recovery_speed": "Heart Of Stone Recovery Speed",
+  "attribute.name.generic.malum.heart_of_stone_strength": "Heart Of Stone Strength",
+  "attribute.name.generic.malum.magic_damage": "Magic Damage",
+  "attribute.name.generic.malum.magic_proficiency": "Magic Proficiency",
+  "attribute.name.generic.malum.magic_resistance": "Magic Resistance",
+  "attribute.name.generic.malum.scythe_proficiency": "Scythe Proficiency",
+  "attribute.name.generic.malum.soul_ward_capacity": "Soul Ward Capacity",
+  "attribute.name.generic.malum.soul_ward_downtime_recovery_speed": "Soul Ward Downtime Recovery Speed",
+  "attribute.name.generic.malum.soul_ward_recovery_speed": "Soul Ward Recovery Speed",
+  "attribute.name.generic.malum.soul_ward_strength": "Soul Ward Strength",
+  "attribute.name.generic.malum.spirit_reach": "Spirit Reach",
+  "attribute.name.generic.malum.spirit_spoils": "Spirit Spoils",
   "block.malum.blazing_quartz_ore": "Blazing Quartz Ore",
   "block.malum.block_of_arcane_charcoal": "Block Of Arcane Charcoal",
   "block.malum.block_of_blazing_quartz": "Block Of Blazing Quartz",
