--- a/src/main/resources/assets/malum/lang/en_us.json
+++ b/src/main/resources/assets/malum/lang/en_us.json
@@ -450,6 +450,7 @@
   "malum.gui.book.entry.page.headline.totem_corruption": "Totem Corruption",
   "malum.gui.book.entry.page.headline.totem_magic": "Totem Magic",
   "malum.gui.book.entry.page.headline.twisted_rock": "Twisted Rock",
+  "malum.gui.book.entry.page.headline.trans_rite": "Trans Rite(s)!",
   "malum.gui.book.entry.page.headline.tyrving": "Tyrving",
   "malum.gui.book.entry.page.headline.voodoo_magic": "Voodoo magic",
   "malum.gui.book.entry.page.headline.warded_belt": "Warded Belt",
@@ -580,6 +581,7 @@
   "malum.gui.book.entry.page.text.totem_magic_a": "The primary use of spirits tends to be selfish power, however spirit arcana isn't limited to just greed. By engraving spirits onto runewood above a totem base in a specific order you may create a spirit rite, a dark ritual that mangles with the nearby area.",
   "malum.gui.book.entry.page.text.totem_magic_b": "Each spirit rite starts at the totem base, above which you'll need to stack runewood logs. Once that is done, engrave the needed spirits onto the wood by simply right clicking it. Spirits can be scraped off by using an axe. When you lay out your rite correctly, activate the totem base.",
   "malum.gui.book.entry.page.text.totem_magic_c": "Individual spirit rites may not be within the range of another rite, however if the rite has a different spirit combination it may be brought closer.",
+  "malum.gui.book.entry.page.text.trans_rite": "",
   "malum.gui.book.entry.page.text.twisted_rock": "If we are to replace sacred arcana with it's opposite the result will become a much grimmer one. Twisted rock is indifferent from it's holy variant apart from the darker tone, however it is capable of suppressing magic.",
   "malum.gui.book.entry.page.text.tyrving_a": "The Tyrving is a rather esoteric blade. It's strange design makes it appear as a weak weapon not suited for combat. However, it's hex ash lining and twisted rock form cause it to deal extra magic damage to the soul, the greater the soul the more benefit.",
   "malum.gui.book.entry.page.text.tyrving_b": "The weapon can also be repaired using arcane restoration quite efficiently.",
@@ -627,6 +629,7 @@
   "malum.gui.book.entry.spirit_trinkets.description": "Forging",
   "malum.gui.book.entry.totem_magic": "Totem Magic",
   "malum.gui.book.entry.totem_magic.description": "Spirit Rites",
+  "malum.gui.book.entry.trans_rite.description": ":)",
   "malum.gui.book.entry.tyrving": "Tyrving",
   "malum.gui.book.entry.tyrving.description": "Ancient Relic",
   "malum.gui.book.entry.voodoo_magic": "Voodoo Magic",
