**inhales** spirit jar is fixed, boats are fully on par with vanilla, screen particles instance properly, the narrow edge necklace works as intended, brazier items emit particles, frogs and allays drop spirits, ether particles moved slightly to match upstream

--- a/src/main/resources/assets/malum/lang/en_us.json
+++ b/src/main/resources/assets/malum/lang/en_us.json
@@ -308,6 +308,7 @@
   "item.malum.ring_of_prowess": "Ring of Prowess",
   "item.malum.ring_of_wicked_intent": "Ring of Wicked Intent",
   "item.malum.runewood_boat": "Runewood Boat",
+  "item.malum.runewood_chest_boat": "Runewood Boat with Chest",
   "item.malum.sacred_spirit": "Sacred Spirit",
   "item.malum.silver_impetus": "Silver Impetus",
   "item.malum.silver_node": "Silver Node",
@@ -329,6 +330,7 @@
   "item.malum.soul_stained_steel_shovel": "Soul Stained Steel Shovel",
   "item.malum.soul_stained_steel_sword": "Soul Stained Steel Sword",
   "item.malum.soulwood_boat": "Soulwood Boat",
+  "item.malum.soulwood_chest_boat": "Soulwood Boat with Chest",
   "item.malum.soulwood_stave": "Soulwood Stave",
   "item.malum.spectral_lens": "Spectral Lens",
   "item.malum.spirit_fabric": "Spirit Fabric",
